# OrenCash

./: .gitignore  .gitmodules  .travis.yml  README.md  autoupdate.sh
apps/: README.md  blockchain.css  commontools.js  explorer.html  miner.html  restful.js  transactions.html  wallet.html
orencash/: LICENSE  README.md
orencash/src/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  Config.h  Config.h.in  CryptoHelpers.h  Database.cpp  Database.h  HTTPServer.cpp  HTTPServer.h  Miner.cpp  Miner.h  Node.cpp  Node.h  Operator.cpp  Operator.h  PersistentObjects-odb.cxx  PersistentObjects-odb.hxx  PersistentObjects-odb.ixx  PersistentObjects.h  RPC.cpp  RPC.h  Transaction.cpp  Transaction.h  TransactionHelpers.h  Wallet.cpp  Wallet.h  orencash.cpp
orencash/src/cmake/: configuration.cmake
orencash/src/cmake/modules/: Findboost-serialization.cmake  Findcryptopp.cmake  Finded25519.cmake  Findlibodb-sqlite.cmake  Findlibodb.cmake  Findodb.cmake  Findrestbed.cmake~  Findrpclib.cmake  Findsqlite3.cmake
orencash/src/dependencies/boost/: Jamroot  bjam  project-config.jam
orencash/src/dependencies/boost/bin.v2/: project-cache.jam
orencash/src/dependencies/odb/libodb-2.4.0/: Makefile  config.lt  config.status  libodb.pc  libtool
orencash/src/dependencies/odb/libodb-2.4.0/odb/: Makefile
orencash/src/dependencies/odb/libodb-2.4.0/odb/.deps/: callback.Plo  connection.Plo  database.Plo  exceptions.Plo  lazy-ptr-impl.Plo  prepared-query.Plo  query-dynamic.Plo  result.Plo  schema-catalog.Plo  section.Plo  session.Plo  statement-processing.Plo  statement.Plo  tracer.Plo  transaction.Plo  vector-impl.Plo
orencash/src/dependencies/odb/libodb-2.4.0/odb/details/.deps/: buffer.Plo  condition.Plo  lock.Plo  mutex.Plo
orencash/src/dependencies/odb/libodb-2.4.0/odb/details/posix/.deps/: exceptions.Plo  thread.Plo
orencash/src/dependencies/odb/libodb-2.4.0/odb/details/shared-ptr/.deps/: base.Plo
orencash/src/dependencies/odb/libodb-sqlite-2.4.0/: Makefile  config.lt  config.status  libodb-sqlite.pc  libtool
orencash/src/dependencies/odb/libodb-sqlite-2.4.0/odb/sqlite/: Makefile
orencash/src/dependencies/odb/libodb-sqlite-2.4.0/odb/sqlite/.deps/: connection-factory.Plo  connection.Plo  database.Plo  error.Plo  exceptions.Plo  prepared-query.Plo  query-const-expr.Plo  query-dynamic.Plo  query.Plo  simple-object-statements.Plo  statement-cache.Plo  statement.Plo  statements-base.Plo  tracer.Plo  traits.Plo  transaction-impl.Plo  transaction.Plo
orencash/src/dependencies/odb/libodb-sqlite-2.4.0/odb/sqlite/details/.deps/: options.Plo
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/: README
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/etc/odb/: default.options
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/: manifest
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/include/c++/4.9.3/x86_64-linux-gnu/bits/: c++config.h
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/include/odb/qt/details/: config.h
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/lib/: libatomic.so.1.1.0  libgcc_s.so.1  libitm.so.1.0.0  libquadmath.so.0.0.0  libstdc++.so.6.0.20  libstdc++.so.6.0.20-gdb.py  libvtv.so.0.0.0
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/lib/gcc/x86_64-linux-gnu/4.9.3/include-fixed/bits/: huge_val.h
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/lib/gcc/x86_64-linux-gnu/4.9.3/plugin/: gtype.state
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/lib/gcc/x86_64-linux-gnu/4.9.3/plugin/include/: auto-host.h  configargs.h  plugin-version.h  tm-preds.h
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/lib/pkgconfig/: libodb-boost.pc  libodb-qt.pc
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/libexec/gcc/x86_64-linux-gnu/4.9.3/: collect2  liblto_plugin.so.0.0.0  lto-wrapper
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/libexec/gcc/x86_64-linux-gnu/4.9.3/install-tools/: fixincl  mkheaders
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/libexec/gcc/x86_64-linux-gnu/4.9.3/plugin/: gengtype
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/share/info/: as.info  bfd.info  binutils.info  gprof.info  ld.info
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/share/locale/ja/LC_MESSAGES/: binutils.mo
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/share/man/man1/: addr2line.1  ar.1  as.1  c++filt.1  dlltool.1  elfedit.1  gprof.1  ld.1  nlmconv.1  nm.1  objcopy.1  objdump.1  ranlib.1  readelf.1  size.1  strings.1  strip.1  windmc.1  windres.1
orencash/src/dependencies/odb/odb-2.4.0-x86_64-linux-gnu/lib/odb/x86_64-linux-gnu/x86_64-linux-gnu/lib/ldscripts/: elf_i386.x  elf_i386.xbn  elf_i386.xc  elf_i386.xd  elf_i386.xdc  elf_i386.xdw  elf_i386.xn  elf_i386.xs  elf_i386.xsc  elf_i386.xsw  elf_i386.xw  elf_l1om.x  elf_l1om.xbn  elf_l1om.xc  elf_l1om.xd  elf_l1om.xdc  elf_l1om.xdw  elf_l1om.xn  elf_l1om.xs  elf_l1om.xsc  elf_l1om.xsw  elf_l1om.xw  elf_x86_64.x  elf_x86_64.xbn  elf_x86_64.xc  elf_x86_64.xd  elf_x86_64.xdc  elf_x86_64.xdw  elf_x86_64.xn  elf_x86_64.xs  elf_x86_64.xsc  elf_x86_64.xsw  elf_x86_64.xw  i386linux.x  i386linux.xbn  i386linux.xn
orencash/src/dependencies/sqlite3/: Makefile  config.status  libtool  sqlite3.pc
orencash/src/dependencies/sqlite3/.deps/: sqlite3-shell.Po  sqlite3-sqlite3.Po  sqlite3.Plo
